# photoeditor

./: .env  .eslintignore  .firebaserc  .gitlab-ci.yml  .prettierrc  .prettierrc.json  README.md  emscripten-test-setup.js  env-example  eslint-redux.js  index.html  package-lock.json  package.json  setupTests.js  tsconfig.json  vite.config.ts  vitest.config.ts
.firebase/: hosting.ZGlzdA.cache
.github/workflows/: deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
assets/: index-B18-wGjb.js  index-B5_uGoUX.js  index-Bn9AxPpr.js  index-Dn0JWNUK.css  index-G24LYagR.js
public/wasm/: filters.js  filters.wasm
src/: App.css  App.tsx  index.css  main.tsx  setupTests.ts
src/app/: App.tsx  main.tsx
src/app/firebase/: firebaseConfig.ts  initAuth.ts
src/app/store/: index.ts
src/assets/wasm/: index.js  wasmFilters.d.ts
src/components/Auth/: AuthForm.tsx  PasswordStrengthIndicator.tsx  auth-form.css
src/components/Card/: PresetCard.tsx  PresetCardWithSave.test.tsx  PresetCardWithSave.tsx  index.ts  preset-card-with-save.css  preset-card.css
src/features/: index.ts  saveImage.ts
src/firebase/: firebaseConfig.ts
src/hooks/: useAuth.ts  useFilters.ts
src/pages/: index.ts
src/services/: presetService.ts
src/store/: index.ts
src/utils/: authUtils.ts  createUserIfNotExists.ts  filters.ts  generatePresetPreview.ts  saveImage.ts  validation.ts
src/wasm/: wasmFilters.js
wasm/: index.js
wasm-filters/: CMakeLists.txt
wasm-filters/src/cpp/: bindings.cpp  filters.cpp  filters.h
wasm-filters/src/js/: wrapper.js
(+93 files in other folders)
